ace-assembly/src/main/config/iptables
# Generated by iptables-save v1.3.5 on Sun Jul 10 08:40:35 2011
*nat
:PREROUTING ACCEPT [22:2187]
:POSTROUTING ACCEPT [41:3364]
:OUTPUT ACCEPT [41:3364]
-A PREROUTING -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8443 
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080 
COMMIT
# Completed on Sun Jul 10 08:40:35 2011
# Generated by iptables-save v1.3.5 on Sun Jul 10 08:40:35 2011
*filter
:INPUT ACCEPT [120:12292]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [266:74404]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A INPUT -p esp -j ACCEPT 
-A INPUT -p ah -j ACCEPT 
-A INPUT -d 224.0.0.251 -p udp -m udp --dport 5353 -j ACCEPT 
-A INPUT -p udp -m udp --dport 631 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 631 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8443 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Sun Jul 10 08:40:35 2011
